dev/efk/demo/logstash.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    k8s-app: logstash
  name: logstash
  namespace: sunbaoqing
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: logstash
  template:
    metadata:
      labels:
        k8s-app: logstash
    spec:
      containers:
        - name: logstash
          image: logstash:7.10.1
          args:
            - --log.level=info
          volumeMounts:
            - mountPath: /usr/share/logstash/pipeline/logstash.conf
              name: config
              readOnly: true
              subPath: logstash.conf
            - name: tz-config
              mountPath: /etc/localtime
      volumes:
        - name: config
          configMap:
            name: logstash-config
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
